--- a/src/app.css
+++ b/src/app.css
@@ -5,17 +5,17 @@
      --background-color: #e0c349; /* Yellow for Background*/
      --hover-color: #5b98fa; /* Light blue for hover elements */
      --highlight-color: #FF9900; /* Orange for higlighting*/
-     --text-color: #ecf0f1; /* Light text color */
+     --text-color: #0f172a; /* Dark text color */
+     --button-text-color: #ecf0f1; /* Light text color */
      --border-color: #2563eb; /* Border color */
      --disabled-color: #7f8c8d; /* Gray for disabled elements */
      --correct-color: #3ce956;
      --incorrect-color: #f94e4e;
-     background-color: var(--background-color);
   }
 
   main {
      font-family: 'Roboto', sans-serif;
-     color: var(--text-color);
+     color: var(--button-text-color);
      text-align: center;
      padding: 1em;
      margin: 0,10em,10em,10em auto;
@@ -23,109 +23,3 @@
      justify-items: center;
      /*border:solid var(--secondary-color) ;*/
   }
-
-  h2{
-   font-family: 'Workbench', sans-serif;
-  }
-
-  h3 {
-   padding-left: 1em;
-   padding-right: 1em;
-  }
- 
-  .currentScore {
-   display: flex;
-  }
-
-  .grid {
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     gap: 10px;
-     width: 45%;
-  }
-
-  .question {
-      background-color: var(--secondary-color);
-      padding: 1em;
-      margin-top: 0;
-      border-radius: 10px;
-      width: calc(45% - 2em);
-      font-size: 1.25rem;
-  }
-
-  .answer-correct {
-   background-color: var(--correct-color);
- }
-
- .answer-incorrect {
-   background-color: var(--incorrect-color);
- }
- 
-  button {
-     background: var(--primary-color);
-     color: var(--text-color);
-     font-family: 'Roboto', sans-serif;
-     border: solid;
-     border-width: .25em;
-     border-color: var(--border-color);
-     border-radius: 10px;
-     font-size: larger;
-     padding: 1em;
-     cursor: pointer;
-     transition: background 0.3s ease;
-     text-align: center;
-  }
- 
-  button:hover {
-     background: var(--hover-color);
-  }
- 
-  button:disabled {
-     background: var(--disabled-color);
-     cursor: not-allowed;
-  }
-
-  .parent-container {
-   display: flex;
-   flex-direction: column;
-   align-items: start;
-  }
-
-  .stack{
-   display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   column-gap: 10px;
-   row-gap: 1em;
-  }
-
-  .categories-label {
-   position: relative;
-   left: 0;
-  }
-
-  .category-button{
-   width: 15em;
-   height: 10em;
-   transition: all .3s ease-in-out;
-  }
-
-  .category-button:hover {
-   transform: scale(1.05);
-   background: var(--primary-color);
-  }
-
-  .start-button {
-   position: absolute;
-   width: 10em;
-   left: 50%;
-   transform: translateX(-50%);
-   margin-top: 3em;
-  }
-
-  .selected {
-   background: var(--correct-color);
- } 
-
- .selected:hover {
-   background: var(--correct-color);
- } 
