inserted the marker font and gave the question box a max and min height

--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Workbench&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 :root {
      --primary-color: #3b82f6; /* Dark blue for primary elements */
      --secondary-color: 	#097054; /* Green for secondary elements */
